syntax = "proto3";

package com.carbonplayer;

option java_package = "com.carbonplayer.model.entity.proto.innerjam";
option java_outer_classname = "InnerJamApiV1Proto";
option optimize_for = LITE_RUNTIME;

import "context/ClientContext.proto";
import "identifiers/SituationId.proto";
import "innerjam/ContentPage.proto";

message GetHomeRequest {

    ClientContext clientContext = 1;
    SituationId firstModuleSituationId = 2;
    string previousDistilledContextToken = 3;

}

message GetHomeResponse {

    enum PreviousContentState {
        ALL_CONTENT_NEEDS_TO_BE_UPDATED = 0;
        ALL_CONTENT_UP_TO_DATE = 1;
    }

    ContentPage homeContentPage = 1;
    repeated ContentPage additionalContentPages = 2;
    string distilledContextToken = 3;
    PreviousContentState previousContentState = 4;

}